# paralink-substrate

./: Cargo.toml  Makefile  README.md
assets/: paralink-2001-genesis  paralink-2001-raw.json  paralink-2001-wasm  paralink-plain.json  polkadot-relay-chain-spec.json
node/: Cargo.toml
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
pallets/ink-extension/contract/: Cargo.toml
pallets/ink-extension/contract/src/: lib.rs
pallets/ink-extension/runtime/: Cargo.toml
pallets/ink-extension/runtime/src/: lib.rs
pallets/quorum/: Cargo.toml
pallets/quorum/src/: lib.rs
pallets/xcm/: Cargo.toml
pallets/xcm/src/: lib.rs
runtime/: Cargo.toml
runtime/src/: lib.rs  xcm_config.rs
scripts/: run-paralink.sh  setup-paralink-2001.sh
