[package]
name = "pallet-quorum"
version = "4.0.0"
edition = "2018"
authors = ['Paralink Network']
repository = 'https://github.com/paralink-network/paralink-substrate'
description = "Relayer Quorum logic lives here"
license = "GPL-3.0-or-later"

[dependencies]
parity-scale-codec = {version = "3.0.0", default-features = false, features = ["derive"] }

# Substrate packages
frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-io = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

balances = { package = 'pallet-balances', git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.27" }

serde = { version = "1.0.140", optional = true, features = ["derive"] }

[features]
default = ['std']
std = [
	'serde',
	'frame-support/std',
	'frame-system/std',
	'parity-scale-codec/std',
	'sp-io/std',
	'sp-runtime/std',
	'sp-std/std',
	'balances/std',
]
