[package]
name = "paralink-ink-contract-extension"
version = "0.0.1"
authors = ["Paralink"]
description = "Paralink ink! extension"
edition = "2021"
license = "Unlicense"
publish = false

[dependencies]
ink_primitives = { version = "=3.3.1", default-features = false }
ink_metadata = { version = "=3.3.1", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "=3.3.1", default-features = false }
ink_storage = { version = "=3.3.1", default-features = false }
ink_lang = { version = "=3.3.1", default-features = false }
ink_prelude = { version = "=3.3.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive"]}


log = { version = "0.4" }

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_env/ink-debug",
    "ink_storage/std",
    "ink_primitives/std",
    "ink_prelude/std",
    "scale/std",
    "scale-info/std",
]
ink-log-chain-extensions = []
